# ki7mt-ai-lab-core

./: AUDIT_LOG.md  AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  README.md  aclocal.m4  autogen.sh  bump-version  config.status  configure  configure.ac  debian_directory_layout.md  ki7mt-ai-lab-core.spec  sources
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1
debian/: control  copyright  ki7mt-ai-lab-core.install  postinst  rules
rpm/: ki7mt-ai-lab-core.spec
scripts/: populate_balloon_callsigns.sh  populate_callsign_grid.sh  populate_contest_signatures.sh  populate_continuous.sh  populate_quality_test_paths.sh  populate_rbn_signatures.sh  populate_signatures.sh  populate_signatures_v2_terrestrial.sh  populate_stratified.sh  populate_v6_clean.sh
src/: ._01-wspr_schema.sql.in  ._03-solar_silver.sql.in  01-wspr_schema.sql.in  01-wspr_schema_v2.sql  02-solar_indices.sql  03-solar_silver.sql  05-training_continuous.sql  06-lab_versions.sql  07-callsign_grid.sql  08-model_features.sql  08-signatures_v1.sql  09-quality_distribution_mv.sql  10-rbn_schema_v1.sql  11-contest_schema_v1.sql  12-signatures_v1.sql  13-training_stratified.sql  14-training_continuous.sql  15-training_v6_clean.sql  16-validation_step_i.sql  17-balloon_callsigns.sql  18-validation_quality_test.sql  19-dxpedition_synthesis.sql  20-signatures_v2_terrestrial.sql  21-balloon_callsigns_v2.sql  22-pskr_schema_v1.sql  23-contest_signatures.sql  24-rbn_signatures.sql  25-live_conditions.sql  26-validation_model_results.sql  27-mode_thresholds.sql  28-pskr_ingest_log.sql  Makefile.am  Makefile.in  ki7mt-lab-db-init  ki7mt-lab-db-init.in  ki7mt-lab-env.in
staged-root/usr/local/share/ki7mt-ai-lab-core/ddl/: 01-wspr_schema.sql  02-solar_indices.sql  03-solar_silver.sql  04-data_mgmt.sql
